Fixing console errors in using gRPC in ofbiz. Converted the all into REST one. Formatted the code following the best practices.